[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Wood and Paper UI/Sprites/Life Bars/Big Bars/3.png" type="Texture" id=1]
[ext_resource path="res://Assets/Wood and Paper UI/Sprites/Life Bars/Big Bars/1.png" type="Texture" id=2]
[ext_resource path="res://Assets/Wood and Paper UI/Sprites/Life Bars/Big Bars/4.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Lifeholder.gd" type="Script" id=4]
[ext_resource path="res://Assets/Wood and Paper UI/Sprites/Life Bars/Colors/1.png" type="Texture" id=5]

[node name="HUD" type="CanvasLayer"]

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="holder" type="Control" parent="HBoxContainer"]
margin_right = 320.0
margin_bottom = 192.0
size_flags_horizontal = 3
script = ExtResource( 4 )

[node name="life1" type="TextureRect" parent="HBoxContainer/holder"]
margin_left = 3.0
margin_top = 20.0
margin_right = 43.0
margin_bottom = 60.0
texture = ExtResource( 2 )

[node name="life2" type="TextureRect" parent="HBoxContainer/holder"]
margin_left = 35.0
margin_top = 20.0
margin_right = 75.0
margin_bottom = 60.0
texture = ExtResource( 1 )

[node name="life4" type="TextureRect" parent="HBoxContainer/holder"]
margin_left = 67.0
margin_top = 20.0
margin_right = 107.0
margin_bottom = 60.0
texture = ExtResource( 1 )

[node name="life3" type="TextureRect" parent="HBoxContainer/holder"]
margin_left = 87.0
margin_top = 20.0
margin_right = 125.0
margin_bottom = 60.0
texture = ExtResource( 3 )

[node name="redlife" type="TextureRect" parent="HBoxContainer/holder"]
margin_left = 84.0
margin_top = 34.0
margin_right = 116.0
margin_bottom = 36.0
texture = ExtResource( 5 )

[node name="redlife2" type="TextureRect" parent="HBoxContainer/holder"]
margin_left = 52.0
margin_top = 34.0
margin_right = 84.0
margin_bottom = 36.0
texture = ExtResource( 5 )

[node name="redlife3" type="TextureRect" parent="HBoxContainer/holder"]
margin_left = 20.0
margin_top = 34.0
margin_right = 52.0
margin_bottom = 36.0
texture = ExtResource( 5 )
